<resources>
    <string name="app_name">Route Helper</string>
    <string name="login">تسجيل دخول</string>
    <string name="email">البريد الإلكترونى</string>
    <string name="description">اظهار</string>
    <string name="password">كلمة المرور</string>
    <string name="sign_in">دخول</string>
    <string name="not_have_account">لا أمتلك حساب</string>
    <string name="sign_up">سجل الأن</string>
    <string name="to_Subscribe">للإشتراك</string>
    <string name="subscribe">الإشتراك</string>
    <string name="fullName">الأسم كامل رباعى</string>
    <string name="phone">رقم الجوال</string>
    <string name="identityNum">رقم الهوية</string>
    <string name="polisa_Num">رقم البوليصة</string>
    <string name="car_Num">رقم السيارة</string>
    <string name="car_Model">موديل السيارة</string>
    <string name="car_Type">نوع السيارة</string>
    <string name="select_baqqa">اختيار الباقة</string>
    <string name="silver_baqqa">الباقة الفضية</string>
    <string name="gold_baqqa">الباقة الذهبية</string>
    <string name="descount_code">كود الخصم</string>
    <string name="register">تسجيل</string>
    <string name="login_now">دخول الأن</string>
    <string name="have_an_account">امتلك حساب</string>
    <string name="forget_password">نسيت كلمة المرور</string>
    <string name="send">إرسال</string>
    <string name="enter_code">ادخال الكود</string>
    <string name="enter_your_code">برجاء ادخال الكود المرسل</string>
    <string name="resend_code">اعادة ارسال الكود</string>
    <string name="confirm_password">تأكيد كلمة المرور</string>
    <string name="change">تغيير</string>
    <string name="required">هذا الحقل مطلوب</string>
    <string name="enter_valid_email">برجاء بريد الكترونى صحيح</string>
    <string name="privacy_policy">سياسة الخصوصية</string>
    <string name="test_txt" translatable="false">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="about_us">من نحن</string>
    <string name="title_activity_home" translatable="false">HomeActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="help">مساعدة</string>
    <string name="contact_sites">مواقع التواصل</string>
    <string name="vehicle_transport">نقل المركبات</string>
    <string name="request_services">طلب الخدمة</string>
    <string name="visa_payment">الدفع بالفيزا</string>
    <string name="home">الرئيسية</string>
    <string name="notifications">Notifications</string>
    <string name="messages">Messages</string>
    <string name="my_account">My Account</string>
    <string name="request_subscription">طلب الإشتراك</string>
    <string name="services">الخدمات</string>
    <string name="emergency_case">حالة الطوارى طلب الخدمة</string>
    <string name="for_Help">للمساعدة</string>
    <string name="Sales_number">رقم المبيعات</string>
    <string name="sales">المبيعات</string>
    <string name="packages">الباقات</string>
    <string name="contact_Us">تواصل معنا</string>
    <string name="error_connection">Error Connection</string>
    <string name="content" translatable="false">Content</string>
    <string name="add_money_to_have_service">"إذا أضفت مبلغ 49 ريال سوف تضاف لك خدمة "</string>
    <string name="alternative_car_in_caseOf_accident">سيارة بديلة فى حالة الحوادث</string>
    <string name="ryal">ريال</string>
    <string name="select">اختيار</string>
    <string name="new_password">كلمة مرور جديدة</string>
    <string name="our_services">خدماتنا</string>
    <string name="help_on_the_route">المساعدة على الطريق</string>
    <string name="as_user">تسجيل كعميل</string>
    <string name="as_empolyer">تسجيل كموظف</string>
    <string name="employer_sign">تسجيل موظف</string>
    <string name="activate">تفعيل</string>
    <string name="order_service">طلب الخدمة</string>
    <string name="employer_register">تسجيل موظف</string>
    <string name="have_aproblem">إذا واجهتك مشكلة</string>
    <string name="email_us">راسلنا</string>
    <string name="data_used_before">هذه البيانات مستخدمة من قبل,  برجاء التأكد من البيانات</string>
    <string name="userName">اسم المشترك</string>
    <string name="save">حفظ</string>
    <string name="updatted_successfully">تم تحديث البيانات بنجاح</string>
    <string name="employe_name">اسم الموظف</string>
    <string name="your_car">سيارتك</string>
    <string name="your_location">موقعك الحالى</string>
    <string name="get_location_success">تم تحديد موقعك بنجاح</string>
    <string name="name">الاسم</string>
    <string name="no_available_chats">لا توجد مراسلات حالية</string>
    <string name="no_messages_yet">لا توجد رسائل حالية</string>
    <string name="enter_your_message">برجاء ادخال الرسالة اولا!</string>
    <string name="send_success">تم الارسال بنجاح</string>
    <string name="send_now">إرسال الأن</string>
    <string name="enter_your_problem">اكتب لنا ما المشكلة هنا</string>
    <string name="policyNumber">رقم البوليصة او الأسم</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="detect_location">اضغط لتحديد الموقع</string>
    <string name="loading">جارى التحميل</string>
    <string name="loginning">جارى الدخول</string>
    <string name="registering">جارى التسجيل</string>
    <string name="sending">جارى الارسال</string>
    <string name="updating">جارى التعديل</string>
    <string name="error_happened">حدث خطأ, برجاء المحاولة مرة أخرى</string>
    <string name="choose_employer_fisrt">قم باختيار مقدم الخدمة اولا</string>
    <string name="Your_car_is_worth" translatable="false">سيارتك تستحق</string>
    <string name="about_car_info">معلومات عن السيارة</string>
    <string name="no_available_notifications">لا توجد اشعارات حالية</string>
    <string name="select_lang">اختيار اللغة</string>
    <string name="logOut">LogOut</string>
    <string name="outofApp">هل تريد الخروج من التطبيق ؟</string>
    <string name="yes">موافق</string>
    <string name="dismiss">الغاء</string>
    <string name="login_first">يجب تسجيل الدخول اولا</string>
    <string name="share_app">Share App</string>
    <string name="card_number">رقم البطاقة</string>
    <string name="expire_date">تاريخ الانتهاء</string>
    <string name="cvv">CVV</string>
    <string name="card_Name">اسم صاحب البطاقة</string>
    <string name="needed_price">اجمالى المبلغ المراد دفعة</string>
    <string name="pay_now">الدفع الأن</string>
    <string name="continu">Continue</string>
    <string name="share_link">Share link:</string>
    <string name="masterCard_clicked">تم اختيار الماستر كارد</string>
    <string name="visaCard_clicked">تم اختيار الفيزاكارد</string>
    <string name="chat_driver">مراسلة</string>
    <string name="book_trip">حجز</string>
    <string name="booking">جارى الحجز</string>
    <string name="ordering">جارى الطلب</string>
    <string name="activationCode">كود التفعيل</string>
    <string name="select_modal">اختر الموديل</string>
    <string name="country_code">كود البلد</string>
    <string name="current_location">الموقع الحالى</string>
    <string name="employer_code">Employer code</string>
</resources>
