<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/notifications"
            android:title="@string/notifications" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/email"
            android:title="@string/messages" />
        <item
            android:id="@+id/nav_myAccount"
            android:icon="@drawable/profile"
            android:title="@string/my_account" />
    </group>

</menu>
