<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_index"
    tools:context=".activities.LogIn">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp">

            <ImageView
                android:id="@+id/loginPage_logo_imageV"
                android:layout_width="200dp"
                android:layout_height="140dp"
                android:layout_marginTop="20dp"
                android:scaleType="fitXY"
                android:src="@drawable/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textSize="24dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginPage_logo_imageV" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_email_layout_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email_ed_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:drawableStart="@drawable/email4"
                    android:drawablePadding="10dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/white" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_password_layout_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_email_layout_id"
                app:passwordToggleContentDescription="@string/description"
                app:passwordToggleDrawable="@drawable/ic_visibility_black_24dp"
                app:passwordToggleEnabled="false">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password_ed_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:drawableStart="@drawable/password4"
                    android:drawablePadding="10dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@android:color/white" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/forget_pass_txtV_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="end"
                android:text="@string/forget_password"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_password_layout_id" />

            <Button
                android:id="@+id/login_btn_id"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/button_background"
                android:text="@string/sign_in"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forget_pass_txtV_id" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_btn_id">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_have_account"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/signUp_txtV_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:layout_marginEnd="7dp"
                    android:text="@string/sign_up"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout >