<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_index"
    tools:context=".fragments.CarFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/updateCar_carNum_layout_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textColorHint="@android:color/white">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/update_carNum_ed_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/car_Num"
                    android:inputType="numberSigned"
                    android:textColor="@android:color/white" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/update_carModel_layout_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/white">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/update_carModel_ed_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/car_Model"
                    android:inputType="numberSigned"
                    android:textColor="@android:color/white" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/update_carType_layout_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/white">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/update_carType_ed_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/car_Type"
                    android:inputType="text"
                    android:textColor="@android:color/white" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/car_update_btn_id"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_background"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/save"
                android:textColor="@android:color/white"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>