<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_index"
    android:padding="20dp"
    tools:context=".activities.SendCode">

    <ImageView
        android:id="@+id/sendCode_logo_imageV"
        android:layout_width="160dp"
        android:layout_height="140dp"
        android:layout_marginTop="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_code"
        android:textColor="@android:color/white"
        android:textSize="23dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sendCode_logo_imageV" />

    <TextView
        android:id="@+id/sendCode_back_txtV_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="7dp"
        android:background="@drawable/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/forgetPass_logo_imageV" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/sendCode_layout_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:textColorHint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/code_ed_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:drawableRight="@drawable/mobile4"
            android:drawablePadding="10dp"
            android:hint="@string/enter_your_code"
            android:inputType="numberSigned"
            android:textColor="@android:color/white" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/sendCode_send_btn_id"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_background"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/send"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sendCode_layout_id" />

    <TextView
        android:id="@+id/resendCode_txtV_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/resend_code"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sendCode_send_btn_id" />
</android.support.constraint.ConstraintLayout>