<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|center_horizontal"
    android:layout_marginBottom="5dp"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    app:cardCornerRadius="5dp"
    app:cardElevation="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:scaleType="fitXY"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_txt_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="Title"
                android:textColor="@android:color/black"
                android:textSize="15dp" />


            <TextView
                android:id="@+id/email_txtV_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textSize="14dp" />

            <EditText
                android:id="@+id/enterProblem_ed_id"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ellipsize="end"
                android:hint="@string/enter_your_problem"
                android:inputType="text"
                android:maxLines="2"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/policyNum_ed_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/policyNumber"
                android:inputType="numberSigned"
                android:maxLines="1"
                android:textColor="@android:color/black" />

            <LinearLayout
                android:id="@+id/driver_contact_layout_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/driver_chat_btn_id"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:background="@color/colorPrimary"
                    android:paddingLeft="3dp"
                    android:paddingRight="3dp"
                    android:text="@string/chat_driver"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/book_trip_btn_id"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:background="@color/colorPrimary"
                    android:paddingLeft="3dp"
                    android:paddingRight="3dp"
                    android:text="@string/order_service"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>